.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
18:33:42 **** Incremental Build of configuration Debug for project Ensc351 ****
make all 
make: Nothing to be done for 'all'.
18:33:42 **** Incremental Build of configuration Debug for project Ensc351Part2 ****
make all 
Building file: ../src/myIO.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -I"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/myIO.d" -MT"src/myIO.o" -o "src/myIO.o" "../src/myIO.cpp"
../src/myIO.cpp: In function ‘int myTcdrain(int)’:
../src/myIO.cpp:107:6: error: ‘cout’ was not declared in this scope
  std:cout << "WILL WAIT FOR: " << des << std:endl;
      ^
../src/myIO.cpp:107:6: note: suggested alternative:
In file included from ../src/myIO.cpp:14:0:
/usr/include/c++/5/iostream:61:18: note:   ‘std::cout’
   extern ostream cout;  /// Linked to standard output
                  ^
../src/myIO.cpp:107:45: error: found ‘:’ in nested-name-specifier, expected ‘::’
  std:cout << "WILL WAIT FOR: " << des << std:endl;
                                             ^
../src/myIO.cpp:107:2: warning: label ‘std’ defined but not used [-Wunused-label]
  std:cout << "WILL WAIT FOR: " << des << std:endl;
  ^
make: *** [src/myIO.o] Error 1
src/subdir.mk:33: recipe for target 'src/myIO.o' failed
18:33:44 **** Incremental Build of configuration Debug for project Ensc351 ****
make all 
make: Nothing to be done for 'all'.
18:33:44 **** Incremental Build of configuration Debug for project Ensc351Part2 ****
make all 
Building file: ../src/myIO.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -I"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/myIO.d" -MT"src/myIO.o" -o "src/myIO.o" "../src/myIO.cpp"
Finished building: ../src/myIO.cpp
 
Building target: Ensc351Part2
Invoking: GCC C++ Linker
g++ -L"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351/Debug" -o "Ensc351Part2"  ./src/Ensc351Part2.o ./src/Medium.o ./src/PeerX.o ./src/ReceiverX.o ./src/SenderX.o ./src/myIO.o   -lEnsc351 -lpthread
Finished building target: Ensc351Part2
 
18:34:17 **** Incremental Build of configuration Debug for project Ensc351 ****
make all 
make: Nothing to be done for 'all'.
18:34:17 **** Incremental Build of configuration Debug for project Ensc351Part2 ****
make all 
Building file: ../src/myIO.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -I"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/myIO.d" -MT"src/myIO.o" -o "src/myIO.o" "../src/myIO.cpp"
Finished building: ../src/myIO.cpp
 
Building target: Ensc351Part2
Invoking: GCC C++ Linker
g++ -L"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351/Debug" -o "Ensc351Part2"  ./src/Ensc351Part2.o ./src/Medium.o ./src/PeerX.o ./src/ReceiverX.o ./src/SenderX.o ./src/myIO.o   -lEnsc351 -lpthread
Finished building target: Ensc351Part2
 
18:36:04 **** Incremental Build of configuration Debug for project Ensc351 ****
make all 
make: Nothing to be done for 'all'.
18:36:04 **** Incremental Build of configuration Debug for project Ensc351Part2 ****
make all 
Building file: ../src/myIO.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -I"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/myIO.d" -MT"src/myIO.o" -o "src/myIO.o" "../src/myIO.cpp"
Finished building: ../src/myIO.cpp
 
Building target: Ensc351Part2
Invoking: GCC C++ Linker
g++ -L"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351/Debug" -o "Ensc351Part2"  ./src/Ensc351Part2.o ./src/Medium.o ./src/PeerX.o ./src/ReceiverX.o ./src/SenderX.o ./src/myIO.o   -lEnsc351 -lpthread
Finished building target: Ensc351Part2
 
18:40:09 **** Incremental Build of configuration Debug for project Ensc351 ****
make all 
make: Nothing to be done for 'all'.
18:40:09 **** Incremental Build of configuration Debug for project Ensc351Part2 ****
make all 
Building file: ../src/myIO.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -I"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/myIO.d" -MT"src/myIO.o" -o "src/myIO.o" "../src/myIO.cpp"
Finished building: ../src/myIO.cpp
 
Building target: Ensc351Part2
Invoking: GCC C++ Linker
g++ -L"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351/Debug" -o "Ensc351Part2"  ./src/Ensc351Part2.o ./src/Medium.o ./src/PeerX.o ./src/ReceiverX.o ./src/SenderX.o ./src/myIO.o   -lEnsc351 -lpthread
Finished building target: Ensc351Part2
 
18:41:13 **** Incremental Build of configuration Debug for project Ensc351 ****
make all 
make: Nothing to be done for 'all'.
18:41:13 **** Incremental Build of configuration Debug for project Ensc351Part2 ****
make all 
Building file: ../src/myIO.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -I"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/myIO.d" -MT"src/myIO.o" -o "src/myIO.o" "../src/myIO.cpp"
Finished building: ../src/myIO.cpp
 
Building target: Ensc351Part2
Invoking: GCC C++ Linker
g++ -L"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351/Debug" -o "Ensc351Part2"  ./src/Ensc351Part2.o ./src/Medium.o ./src/PeerX.o ./src/ReceiverX.o ./src/SenderX.o ./src/myIO.o   -lEnsc351 -lpthread
Finished building target: Ensc351Part2
 
18:42:05 **** Incremental Build of configuration Debug for project Ensc351 ****
make all 
make: Nothing to be done for 'all'.
18:42:06 **** Incremental Build of configuration Debug for project Ensc351Part2 ****
make all 
Building file: ../src/myIO.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -I"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/myIO.d" -MT"src/myIO.o" -o "src/myIO.o" "../src/myIO.cpp"
Finished building: ../src/myIO.cpp
 
Building target: Ensc351Part2
Invoking: GCC C++ Linker
g++ -L"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351/Debug" -o "Ensc351Part2"  ./src/Ensc351Part2.o ./src/Medium.o ./src/PeerX.o ./src/ReceiverX.o ./src/SenderX.o ./src/myIO.o   -lEnsc351 -lpthread
Finished building target: Ensc351Part2
 
18:44:57 **** Incremental Build of configuration Debug for project Ensc351 ****
make all 
make: Nothing to be done for 'all'.
18:44:57 **** Incremental Build of configuration Debug for project Ensc351Part2 ****
make all 
Building file: ../src/myIO.cpp
Invoking: GCC C++ Compiler
g++ -std=c++1y -I"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351" -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/myIO.d" -MT"src/myIO.o" -o "src/myIO.o" "../src/myIO.cpp"
Finished building: ../src/myIO.cpp
 
Building target: Ensc351Part2
Invoking: GCC C++ Linker
g++ -L"/media/sf_U_ensc251/workspace-cpp-Neon3/Ensc351/Debug" -o "Ensc351Part2"  ./src/Ensc351Part2.o ./src/Medium.o ./src/PeerX.o ./src/ReceiverX.o ./src/SenderX.o ./src/myIO.o   -lEnsc351 -lpthread
Finished building target: Ensc351Part2
 
18:45:13 **** Incremental Build of configuration Debug for project Ensc351 ****
make all 
make: Nothing to be done for 'all'.
18:45:13 **** Incremental Build of configuration Debug for project Ensc351Part2 ****
make all 
make: Nothing to be done for 'all'.
18:45:26 **** Incremental Build of configuration Debug for project Ensc351 ****
make all 
make: Nothing to be done for 'all'.
18:45:26 **** Incremental Build of configuration Debug for project Ensc351Part2 ****
make all 
make: Nothing to be done for 'all'.
18:45:38 **** Incremental Build of configuration Debug for project Ensc351 ****
make all 
make: Nothing to be done for 'all'.
18:45:38 **** Incremental Build of configuration Debug for project Ensc351Part2 ****
make all 
make: Nothing to be done for 'all'.
